on create site form, ensure site domain input appears inline to align with domain label

--- a/sass/partials/_inputs.scss
+++ b/sass/partials/_inputs.scss
@@ -79,3 +79,9 @@ input[type="radio"].styled + label:before,
 input[type="radio"].styled + strong:before {
   opacity: 0;
 }
+
+// overrides for site (blog) creation using some inline form inputs
+.create-blog #buddypress #blogname {
+  display: inline;
+  width: unset;
+}
